# RAG_LIBRARY_MANAGER

./: .gitignore  PRD.md  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
src/chunkers/: hierarchy.py  paragraph.py  recursive.py  semantic.py  sentence.py
src/core/: cache.py  chunker_manager.py  config.py  converter.py  ingest.py  rag.py  storage.py  vector_store.py
src/resources/prompts/: enrich_chunk.txt  magic_rewrite.txt  rag_assistant.txt  rerank_bypass.txt
src/ui/: styles.py
